--- a/EFI/CLOVER/config.plist
+++ b/EFI/CLOVER/config.plist
@@ -120,7 +120,7 @@
 	<key>Boot</key>
 	<dict>
 		<key>Arguments</key>
-		<string>keepsyms=1 dart=0 debug=0x100 -v shikigva=40</string>
+		<string>keepsyms=1 dart=0 debug=0x100 -v shikigva=40 darkwake=8</string>
 		<key>DefaultVolume</key>
 		<string>LastBootedVolume</string>
 		<key>Timeout</key>
